<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, WMTestActivity!</string>
    <string name="app_name">WMTest</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="stop">Stop</string>
    <string name="record">Record</string>
    <string name="thanks">Thanks for helping us! Please tell us is the watermelon you tested is GOOD or BAD.</string>
    <string name="good">GOOD</string>
    <string name="bad">BAD</string>
    <string name="email"></string>
    <string name="send_email">Send us an Email</string>
    <string name="save">Save to local</string>
    <string name="exit">Exit</string>
    <string name="tellus">Tell us</string>
    <string name="ripe">Ripe</string>
    <string name="unripe">Unripe</string>
    <string name="thanku">Thanks for using our application! Please tell us whether the result is correct or not to help us improve the application!</string>
    <string name="ss">Start</string>
    <string name="cl">WaterMelonClassify</string>
</resources>
