<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/thanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thanks"
        android:textColor="#33AAAA"
        android:textSize="16dp" />

    <Button
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email" android:layout_gravity="center|bottom" android:layout_marginBottom="70dp"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" android:layout_gravity="bottom|center"/>

    <RadioGroup
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="276dp"
        android:layout_gravity="center" >

        <RadioButton
            android:id="@+id/good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good" />

        <RadioButton
            android:id="@+id/bad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad" android:layout_marginTop="100dp" android:layout_gravity="center"/>

    </RadioGroup>

</FrameLayout>